--- a/templates/partials/home-bloglist.html
+++ b/templates/partials/home-bloglist.html
@@ -1,5 +1,5 @@
 {% set blogs = get_section(path="blog/_index.md") %}
-{% set limit = 4 %}
+{% set limit = config.extra.posts_to_show %}
 <article>
 	<h2>Latest {{ limit }} Posts </h2>
 	<ol class="postlist">
