--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,9 @@
     <p class="summary">This is the personal blog of a landscape archaeologist who likes gis, remote sensing, coding, technology and gaming.</p>
     <p class="info"> This is a <a href="/blog/considerations-on-this-blog">personal space</a>, in which I put down my ideas, personal thoughts and everything I become randomly obsessed about.</p>
     <p class= "info">If you want to read some wall of text about me or there website, there is an <a href="/about">about page</a>. I also maintain a more <a href="https://andreatitolo.com">academic-focused website</a>.</p>
-    <hr>
 </article>
 {% include "partials/home-bloglist.html" %}
-<hr>
-<article>
+<article class="article-home">
     <h2>Webrings</h2>
     <p>
         <a href="https://fediring.net/previous?host=archaeoramblings.com">←</a>
