--- a/templates/partials/home-bloglist.html
+++ b/templates/partials/home-bloglist.html
@@ -1,6 +1,6 @@
 {% set blogs = get_section(path="blog/_index.md") %}
 {% set limit = config.extra.posts_to_show %}
-<article>
+<article class="article-home">
 	<h2>Latest {{ limit }} Posts </h2>
 	<ol class="postlist">
 	{% for page in blogs.pages | slice(end=limit) %}
