--- a/templates/partials/home-bloglist.html
+++ b/templates/partials/home-bloglist.html
@@ -13,7 +13,7 @@
 	</ol>
 	{% if blogs.pages | length > limit %}
 	<nav class="pagination">
-		<p> {{blogs.pages | length - limit }} more posts can be found in <a href="/blog/">the archive</a>.</p></p>
+		<p> {{blogs.pages | length - limit }} more posts can be found in <a href="/blog/">the archive</a>.</p>
 	</nav>
 </article>
 {% endif %}
