--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
 {% block content %}
 <article>
 <h1>{{ config.title}} </h1>
-    <p class="summary">This is the personal blog of a landscape archaeologist who likes gis, remote sensing, coding, technology and gaming.</p>
+    <p class="summary">Welcome! This is the personal blog of a geek who likes coding, technology and gaming. I work as a landscape archaeologist with gis, remote sensing, and R.</p>
     <p class="info"> This is a <a href="/blog/considerations-on-this-blog">personal space</a>, in which I put down my ideas, personal thoughts and everything I become randomly obsessed about.</p>
-    <p class= "info">If you want to read some wall of text about me or there website, there is an <a href="/about">about page</a>. I also maintain a more <a href="https://andreatitolo.com">academic-focused website</a>.</p>
+    <p class= "info">If you want to read some wall of text about me or there website, there is an <a href="/about">about page</a>.</p>
 </article>
 {% include "partials/home-bloglist.html" %}
 <article class="article-home">
-    <h2>Webrings</h2>
+    <h2>World Wide Web</h2>
+    <p>I maintain (and update from time to time) a <a href="/links">Blogroll</a> and a <a href="/about#buttons">button wall</a>. Below are a list of webrings I have joined too, should be easy to find other small, independent blogs.</p>
     <p>
         <a href="https://fediring.net/previous?host=archaeoramblings.com">←</a>
         <a href="https://fediring.net/">Fediring</a> | <a href="https://fediring.net/random">Random</a>
