update about page and add buttons

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -953,3 +953,12 @@ a[href].zola-anchor:focus,
   color: var(--text);
   transition: var(--transition);
 }
+
+#buttons-container {
+  margin: 0;
+  padding: 0;
+}
+
+#buttons-container p > a:hover {
+  background: none;
+}
