--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 {% include "partials/home-bloglist.html" %}
 <article class="article-home">
     <h2>World Wide Web</h2>
-    <p>I maintain (and update from time to time) a <a href="/links">Blogroll</a> and a <a href="/about#buttons">button wall</a>. Below are a list of webrings I have joined too, should be easy to find other small, independent blogs.</p>
+    <p>I maintain (and update from time to time) a <a href="/links">Blogroll</a>, a <a href="/about#buttons">button wall</a>, and a list of <a href="/bookmarks">Bookmarks</a>. Below are a list of webrings I have joined too, should be easy to find other small, independent blogs.</p>
     <p>
         <a href="https://fediring.net/previous?host=archaeoramblings.com">←</a>
         <a href="https://fediring.net/">Fediring</a> | <a href="https://fediring.net/random">Random</a>
