--- a/templates/base.html
+++ b/templates/base.html
@@ -30,12 +30,14 @@
   {% endblock %}
 
   {% block rss %}
-    <link rel="alternate" type="application/atom+xml" title="RSS" href="{{ get_url(path="atom.xml", trailing_slash=false) }}">
-    {% endblock %}
+    <link rel="alternate" type="application/atom+xml" title="Archaeoramblings Feed" href="{{ get_url(path="atom.xml", trailing_slash=false) }}">
+    <link rel="alternate" type="application/atom+xml" title="Blog posts Feed" href="{{ get_url(path="blog/atom.xml", trailing_slash=false) }}">
+    <link rel="alternate" type="application/atom+xml" title="Bookmarks Feed" href="{{ get_url(path="atom.xml", trailing_slash=false) }}">
+  {% endblock %}
     <meta name="generator" content="Zola v.0.18">
-    {% block css %}
+  {% block css %}
     <link rel="stylesheet" href="{{ get_url(path="css/index.css", trailing_slash=false) }}">
-    {% endblock css %}
+  {% endblock css %}
 </head>
 
 <body>
