--- a/static/css/index.css
+++ b/static/css/index.css
@@ -826,6 +826,13 @@ a[href].zola-anchor:focus,
   margin-right: auto;
 }
 
+.img-avatar {
+  max-width: 100%;
+  display: block;
+  margin: 2.5em auto;
+  border-radius: 75%;
+}
+
 .post-footer {
   text-align: center;
   margin: 4rem 0 1rem 0;
