--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block content %}
 <article>
 <h1>{{ config.title}} </h1>
@@ -12,14 +11,14 @@
     <h2>World Wide Web</h2>
     <p>I maintain (and update from time to time) a <a href="/links">Blogroll</a>, a <a href="/about#buttons">button wall</a>, and a list of <a href="/bookmarks">Bookmarks</a>. Below are a list of webrings I have joined too, should be easy to find other small, independent blogs.</p>
     <p>
-        <a href="https://fediring.net/previous?host=archaeoramblings.com">←</a>
+        <a href="https://fediring.net/previous?host=archaeoramblings.com">&larr;</a>
         <a href="https://fediring.net/">Fediring</a> | <a href="https://fediring.net/random">Random</a>
-        <a href="https://fediring.net/next?host=archaeoramblings.com">→</a>
+        <a href="https://fediring.net/next?host=archaeoramblings.com">&rarr;</a>
     </p>
     <p>
-        <a href="https://webring.archaeo.social/previous?host=archaeoramblings.com">←</a>
+        <a href="https://webring.archaeo.social/previous?host=archaeoramblings.com">&larr;</a>
         <a href="https://webring.archaeo.social/">Archaeoring</a> | <a href="https://webring.archaeo.social/random">Random</a>
-        <a href="https://webring.archaeo.social/next?host=archaeoramblings.com">→</a>
+        <a href="https://webring.archaeo.social/next?host=archaeoramblings.com">&rarr;</a>
     </p>
 </article>
 {% endblock content %}
